<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_vin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingBottom="@dimen/activity_vertical_padding"
    tools:context=".CompterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btNouveauComptage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickbtNouveauComptage"
            android:text="@string/btNouveauComptage2"
            android:textColor="@android:color/holo_orange_dark"
            app:backgroundTint="@color/cardview_shadow_start_color"
            app:backgroundTintMode="multiply" />

        <Button
            android:id="@+id/btDeco2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pum"
            android:onClick="onClickbtDeco"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:backgroundTintMode="multiply" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imgCartecitrouille2"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/txtCarte22"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tvResultat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHighlight="@android:color/holo_orange_dark"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="italic" />
    <EditText
        android:id="@+id/etNbcitrouille2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_jeux"
        android:ems="15"
        android:gravity="center"
        android:hint="@string/edtNombrecitrouille2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="0dp"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="@android:color/holo_orange_dark" />



    <Button
        android:id="@+id/btValider2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickbtValider"
        android:padding="0dp"
        android:text="@string/btValider2"
        android:textColor="@android:color/holo_orange_dark"
        app:backgroundTint="@color/cardview_shadow_start_color" />

    <Button
        android:id="@+id/btJouer2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickbtComptage"
        android:padding="0dp"
        android:text="@string/btJouer2"
        android:textColor="@android:color/holo_orange_dark"
        app:backgroundTint="@color/cardview_shadow_end_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvReponses2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtReponses2"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvNbRepCorrectes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/txtNbRepCorrectes2"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:textSize="18sp" />


    </RelativeLayout>

</LinearLayout>