<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_vin"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".PenduActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="#52000000"
            android:gravity="center"
            android:text="@string/tvPendu"
            android:textColor="#B71C1C"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btJouer3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonplay"
            android:onClick="onClickbtJouerPendu"
            android:text="JOUER"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/toucheplay" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/imgPendu"
            android:layout_width="300dp"
            android:layout_height="320dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="Le pendu"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cor0"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvMot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/tvMot"
            android:textColor="#FB0000"
            android:textSize="25dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/buttonlettre"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:text="A"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/touchelettre" />

        <Button
            android:id="@+id/btB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="B"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="C"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="D"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="E"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="F"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="G"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="H"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="I"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="J"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="K"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="L"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="M"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="N"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="O"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="P"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="Q"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="R"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="S"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="T"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="U"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="V"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btW"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_margin="2dp"
            android:background="@drawable/buttonlettre"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:text="W"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:text="X"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/buttonlettre"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:text="Y"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:minWidth="35dp"
            android:onClick="onClickbtLettre"
            android:background="@drawable/buttonlettre"
            android:scr="@drawable/buttonlettre"
            android:text="Z"
            app:backgroundTint="@color/touchelettre"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvFaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FAUX :"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvQui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tvQui"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>